# lintai

./: .gitignore  ARCH_GAPS.md  Cargo.toml  PUBLIC_COMPATIBILITY_POLICY.md  README.md  V0_1_RELEASE_CHARTER.md  package-lock.json  package.json
crates/lintai-ai-security/: Cargo.toml
crates/lintai-ai-security/benches/: provider_perf.rs  signals_hot_paths.rs
crates/lintai-ai-security/src/: claude_settings_rules.rs  corpus_tests.rs  devcontainer_rules.rs  docker_compose_rules.rs  dockerfile_rules.rs  github_workflow_rules.rs  helpers.rs  hook_rules.rs  json_locator.rs  json_rules.rs  lib.rs  markdown_rules.rs  matchers.rs  native_catalog.rs  perf_tests.rs  policy_provider.rs  provider.rs  registry.rs  security_rule_catalog.rs  server_json_rules.rs  signals.rs  tests.rs  tool_json_rules.rs
crates/lintai-ai-security/src/corpus_tests/: benign.rs  edge.rs  malicious.rs  mod.rs
crates/lintai-ai-security/src/registry/: catalog.rs  claude_settings.rs  devcontainer.rs  docker_compose.rs  dockerfile.rs  github_workflow.rs  hooks.rs  json.rs  markdown.rs  metadata.rs  presets.rs  remediation.rs  server_json.rs  tool_json.rs
crates/lintai-ai-security/src/signals/: claude_settings.rs  devcontainer.rs  docker_compose.rs  dockerfile.rs  github_workflow.rs  hook.rs  json.rs  markdown.rs  markdown_frontmatter.rs  markdown_region_scan.rs  mod.rs  server_json.rs  shared.rs  tests.rs  tool_json.rs
crates/lintai-ai-security/src/signals/shared/: common.rs  github_workflow.rs  hook.rs  json.rs  markdown.rs
crates/lintai-ai-security/src/signals/shared/json/: auth_env.rs  (+6 more)
crates/lintai-ai-security/src/tests/: claude_settings.rs  family_helpers.rs  frontmatter.rs  json_mcp.rs
crates/lintai-builtins/: Cargo.toml
crates/lintai-builtins/src/: lib.rs
crates/lintai-cli/: Cargo.toml  known_roots.toml
crates/lintai-cli/src/: app.rs  args.rs  builtin_providers.rs  compat_tests.rs  external_validation.rs  generated_docs.rs  internal_bin.rs  known_scan.rs  lib.rs  main.rs  output.rs  path.rs  policy_os.rs  sample_repo_tests.rs  security_rule_catalog.rs  shipped_rules.rs  site_catalog.rs
crates/lintai-cli/src/args/: common.rs  fix.rs  inventory.rs  known_scan.rs  policy.rs  scan.rs
crates/lintai-cli/src/builtin_providers/: backend.rs  kind.rs  product.rs  runner.rs  test_support.rs
crates/lintai-cli/src/commands/: advisory_db.rs  explain_config.rs  fix.rs  inventory_os.rs  mod.rs  policy_os.rs  scan.rs  scan_known.rs
crates/lintai-cli/src/execution/: mod.rs
crates/lintai-cli/src/external_validation/: application.rs  inventory.rs  mod.rs  model.rs  package.rs  paths.rs  runner.rs  scan.rs  tests.rs
crates/lintai-cli/src/external_validation/inventory/: ai_native.rs  common.rs  github_actions.rs  mod.rs  server_json.rs  tool_json.rs
crates/lintai-cli/src/external_validation/report/: ai_native.rs  canonical.rs  canonical_support.rs  common.rs  github_actions.rs  mod.rs  sec347.rs  server_json.rs  tool_json.rs
crates/lintai-cli/src/external_validation/scan/: command.rs  ledger.rs  repo.rs
crates/lintai-cli/src/known_scan/: constants.rs  discovery.rs  inventory.rs  manifest.rs  mod.rs  model.rs  scan.rs  tests.rs
crates/lintai-cli/src/known_scan/scan/: inventory.rs  mod.rs  overrides.rs  rewrite.rs  walk.rs
crates/lintai-cli/src/output/: build.rs  json.rs  mod.rs  model.rs  sarif.rs  text.rs
crates/lintai-cli/src/output/text/: common.rs  discovery.rs  inventory.rs  policy.rs  scan.rs  style.rs
crates/lintai-cli/src/policy_os/: evaluate.rs  load.rs  mod.rs  model.rs  tests.rs
crates/lintai-cli/src/security_rule_catalog/: catalog.rs  format.rs  mod.rs  priority_appendix.rs  tests.rs
crates/lintai-cli/src/shipped_rules/: aliases.rs  index.rs  map.rs  model.rs
crates/lintai-cli/src/site_catalog/: domain.rs  presentation.rs  validation.rs
crates/lintai-cli/tests/: docs_commands.rs  docs_contract.rs  external_validation_contract.rs  fix_commands.rs  inventory_os_commands.rs  known_scan_commands.rs  legacy_contract.rs  policy_os_commands.rs  public_entrypoints.rs
crates/lintai-dep-vulns/: Cargo.toml
crates/lintai-dep-vulns/corpus/benign/fixed-lockfiles-safe/: case.toml
crates/lintai-dep-vulns/corpus/benign/malformed-lockfile-safe/: case.toml
crates/lintai-dep-vulns/corpus/malicious/multi-lockfile-dedupe/: case.toml
crates/lintai-dep-vulns/corpus/malicious/npm-shrinkwrap-vulnerable/: case.toml
crates/lintai-dep-vulns/corpus/malicious/package-lock-vulnerable/: case.toml
crates/lintai-dep-vulns/data/: npm-advisories.v1.json
crates/lintai-dep-vulns/src/: catalog.rs  lib.rs  provider.rs  snapshot.rs  tests.rs
crates/lintai-engine/: Cargo.toml
crates/lintai-engine/src/: artifact_view.rs  builder.rs  detector.rs  discovery.rs  dynamic_detection.rs  engine.rs  engine_tests.rs  error.rs  lib.rs  normalize.rs  provider.rs  scan_schedule.rs  summary.rs  workspace_index.rs
crates/lintai-engine/src/config/: mod.rs  model.rs  presets.rs  resolve.rs  schema.rs  tests.rs
crates/lintai-engine/src/config/load/: glob.rs  mod.rs  parse.rs  raw.rs
crates/lintai-engine/src/detector/: match.rs  tests.rs
crates/lintai-engine/src/discovery/: filter.rs  walk.rs
crates/lintai-engine/src/dynamic_detection/: gemini.rs  glob.rs  paths.rs  plugin_manifest.rs
crates/lintai-engine/src/engine/: file_scan.rs  runtime.rs  workspace.rs
crates/lintai-engine/src/engine/runtime/: accounting.rs  execution.rs  per_file.rs  read.rs
crates/lintai-engine/src/engine/workspace/: executor.rs  projection.rs
crates/lintai-engine/src/provider/: catalog.rs  diagnostics.rs  normalize.rs
crates/lintai-engine/src/summary/: finalize.rs  model.rs
crates/lintai-engine/src/suppress/: mod.rs  tests.rs
crates/lintai-parse/: Cargo.toml
crates/lintai-parse/src/: lib.rs  limits.rs  model.rs  tests.rs
crates/lintai-parse/src/parse/: frontmatter.rs  json.rs  markdown.rs  mod.rs  shell.rs  yaml.rs
crates/lintai-testing/: Cargo.toml
crates/lintai-testing/src/: case_manifest.rs  lib.rs  lib_tests.rs  provider_harness.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: parse_documents.rs
(+2092 files in other folders)
