[workspace]
members = [
    "crates/lintai-api",
    "crates/lintai-builtins",
    "crates/lintai-dep-vulns",
    "crates/lintai-testing",
    "crates/lintai-engine",
    "crates/lintai-runtime",
    "crates/lintai-parse",
    "crates/lintai-adapters",
    "crates/lintai-ai-security",
    "crates/lintai-policy",
    "crates/lintai-fix",
    "crates/lintai-cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
authors = ["lintai contributors"]

[workspace.dependencies]
globset = "0.4.18"
ignore = "0.4.24"
lintai-api = { path = "crates/lintai-api", version = "0.1.0" }
lintai-builtins = { path = "crates/lintai-builtins", version = "0.0.0" }
lintai-dep-vulns = { path = "crates/lintai-dep-vulns", version = "0.0.0" }
lintai-testing = { path = "crates/lintai-testing", version = "0.1.0" }
lintai-engine = { path = "crates/lintai-engine", version = "0.0.0" }
lintai-runtime = { path = "crates/lintai-runtime", version = "0.0.0" }
lintai-parse = { path = "crates/lintai-parse", version = "0.0.0" }
lintai-adapters = { path = "crates/lintai-adapters", version = "0.0.0" }
lintai-ai-security = { path = "crates/lintai-ai-security", version = "0.0.0" }
lintai-policy = { path = "crates/lintai-policy", version = "0.0.0" }
lintai-fix = { path = "crates/lintai-fix", version = "0.0.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml_bw = "2.4.0"
schemars = { version = "1.2.1", features = ["derive"] }
semver = "1.0.27"
toml = "0.8.23"

# Profile tuning to keep target/ small.
# Our code keeps line-level debug info (enough for backtraces and lldb line stepping),
# dependencies drop debug info entirely — they rarely need stepping through.
[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false
