[package]
name = "lintai-ai-security"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
lintai-api.workspace = true
serde_json.workspace = true

[dev-dependencies]
lintai-testing.workspace = true
lintai-engine.workspace = true
lintai-runtime.workspace = true
lintai-adapters.workspace = true
serde.workspace = true
toml.workspace = true
criterion = "0.5.1"

[lib]
path = "src/lib.rs"

[[bench]]
name = "provider_perf"
harness = false

[[bench]]
name = "signals_hot_paths"
harness = false
