[package]
name = "lintai-builtins"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
lintai-api.workspace = true
lintai-ai-security.workspace = true
lintai-dep-vulns.workspace = true
lintai-policy.workspace = true

[lib]
path = "src/lib.rs"
