[package]
name = "lintai-cli"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
lintai-api.workspace = true
lintai-adapters.workspace = true
lintai-engine.workspace = true
lintai-runtime.workspace = true
lintai-ai-security.workspace = true
lintai-policy.workspace = true
lintai-fix.workspace = true
globset.workspace = true
ignore.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_bw.workspace = true
toml.workspace = true

[dev-dependencies]
lintai-testing.workspace = true

[[bin]]
name = "lintai"
path = "src/main.rs"

[[bin]]
name = "lintai-external-validation"
path = "src/bin/lintai-external-validation.rs"
