[package]
name = "lintai-dep-vulns"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
lintai-api.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
lintai-engine.workspace = true
lintai-runtime.workspace = true
lintai-testing.workspace = true

[lib]
path = "src/lib.rs"
