[package]
name = "lintai-engine"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
globset.workspace = true
ignore.workspace = true
lintai-api.workspace = true
lintai-adapters.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

[lib]
path = "src/lib.rs"
