[package]
name = "lintai-parse"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
lintai-api.workspace = true
serde_json.workspace = true
serde_yaml_bw.workspace = true

[dev-dependencies]
proptest = "1.11.0"

[lib]
path = "src/lib.rs"
