[package]
name = "lintai-testing"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
lintai-api.workspace = true
lintai-engine.workspace = true
lintai-runtime.workspace = true
serde.workspace = true
toml.workspace = true

[lib]
path = "src/lib.rs"
